# ai-task-router

./: .gitignore  AGENTS.md  AI_BOOTSTRAP.md  CARRY_FORWARD.md  CLAUDE.md  DECISION_LOG.md  IMPLEMENTATION_STATUS.md  INITIAL_SCOPE.md  README.md  SECURITY.md  SESSION_STATE.md  START_HERE.md  index.html  package-lock.json  package.json  playwright.config.ts  project-control.yaml  tsconfig.json  vitest.config.ts
docs/: 2026-07-03-current-pathway.md  2026-07-04-ai-environmental-impact-information-session.md  2026-07-04-cloudflare-pages-hosted-preview-smoke.md  2026-07-04-desktop-packaging-signing-spike.md  2026-07-04-desktop-technical-preview-artifacts.md  2026-07-04-desktop-trust-distribution-plan.md  2026-07-04-old-skool-ai-hub-handoff.md  2026-07-04-public-launch-master-plan.md  2026-07-04-release-security-readiness-packet.md  2026-07-04-web-release-candidate-security-pass.md  2026-07-05-cloudflare-production-launch-smoke.md  2026-07-05-desktop-download-readiness-gate.md  2026-07-05-impact-estimator-methodology.md  2026-07-05-public-hub-and-cross-site-link-smoke.md  2026-07-05-public-impact-insight-cloudflare-update.md  2026-07-05-public-pdf-report-cloudflare-update.md  2026-07-05-public-stage-guidance-cloudflare-update.md  2026-07-06-desktop-public-distribution-decision.md  CHANGELOG.md  manual.md  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.internal-windows.conf.json  tauri.technical-preview.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  lib.rs  main.rs
src-tauri/windows-msix/: Package.appxmanifest
(+84 files in other folders)
