[package]
name = "ai-task-router-desktop"
version = "0.2.0"
description = "AI Task Router desktop shell"
authors = ["Guided AI Labs Ltd"]
license = ""
repository = "https://github.com/Adamgdwn/ai-task-router"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai_task_router_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
